--- a/src/Views/CommitDetail.axaml
+++ b/src/Views/CommitDetail.axaml
@@ -24,6 +24,7 @@
                             SignInfo="{Binding SignInfo}"
                             SupportsContainsIn="True"
                             WebLinks="{Binding WebLinks}"
+                            Children="{Binding Children}"
                             IssueTrackerRules="{Binding IssueTrackerRules}"/>
 
           <!-- Line -->
