--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -123,8 +123,14 @@
           </ItemsControl>
 
           <!-- CHILDREN -->
-          <TextBlock Grid.Row="2" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Children}"/>
-          <ItemsControl Grid.Row="2" Grid.Column="1" Height="24" Margin="12,0,0,0" ItemsSource="{Binding #ThisControl.Children}" IsVisible="{Binding #ThisControl.Children.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
+          <TextBlock Grid.Row="2" Grid.Column="0"
+                     Classes="info_label"
+                     Text="{DynamicResource Text.CommitDetail.Info.Children}"
+                     IsVisible="{Binding #ThisControl.Children.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}"/>
+          <ItemsControl Grid.Row="2" Grid.Column="1"
+                        Height="24" Margin="12,0,0,0"
+                        ItemsSource="{Binding #ThisControl.Children}"
+                        IsVisible="{Binding #ThisControl.Children.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
             <ItemsControl.ItemsPanel>
               <ItemsPanelTemplate>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center"/>
