--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -121,7 +121,7 @@
                            PointerPressed="OnSHAPressed">
                   <TextBlock.Styles>
                     <Style Selector="ToolTip">
-                      <Setter Property="MaxWidth" Value="800"/>
+                      <Setter Property="MaxWidth" Value="600"/>
                     </Style>
                   </TextBlock.Styles>
 
@@ -134,7 +134,7 @@
                           <TextBlock Grid.Column="2" Classes="primary" Text="{Binding CommitterTimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
                         </Grid>
 
-                        <TextBlock Classes="primary" Margin="0,8,0,0" Text="{Binding Subject}" />
+                        <TextBlock Classes="primary" Margin="0,8,0,0" Text="{Binding Subject}" TextWrapping="Wrap"/>
                       </StackPanel>
                     </DataTemplate>
                   </TextBlock.DataTemplates>
