--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -512,6 +512,12 @@
   <Style Selector="Button.flat.primary ToolTip TextBlock">
     <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
   </Style>
+  <Style Selector="Button.flat:disabled /template/ ContentPresenter#PART_ContentPresenter">
+    <Setter Property="Background" Value="Transparent"/>
+  </Style>
+  <Style Selector="Button.flat:disabled">
+    <Setter Property="Background" Value="{DynamicResource Brush.FlatButton.Background}"/>
+  </Style>
 
   <Style Selector="aes|SearchPanel">
     <Setter Property="Template">
