--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -524,7 +524,7 @@
 
     <!-- Right -->
     <Grid Grid.Column="2" RowDefinitions="Auto,Auto,*"> 
-      <Grid Grid.Row="0" Height="28" ColumnDefinitions="*,Auto,Auto,Auto" Background="{DynamicResource Brush.Conflict}" IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}">
+      <Grid Grid.Row="0" Height="28" ColumnDefinitions="*,Auto,Auto" Background="{DynamicResource Brush.Conflict}" IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}">
         <ContentControl Grid.Column="0" Margin="8,0" Content="{Binding InProgressContext}">
           <ContentControl.DataTemplates>
             <DataTemplate DataType="vm:CherryPickInProgress">
@@ -557,14 +557,6 @@
           </Button.IsVisible>
         </Button>
         <Button Grid.Column="2" 
-                Classes="flat primary" 
-                FontWeight="Regular"
-                BorderThickness="0"
-                Content="{DynamicResource Text.Repository.Continue}" 
-                Padding="8,0" Margin="4,0" 
-                Command="{Binding ContinueMerge}" 
-                IsVisible="{Binding !HasUnsolvedConflicts}"/>
-        <Button Grid.Column="3" 
                 Classes="flat" 
                 FontWeight="Regular"
                 BorderThickness="0"
